--- a/backend/spring + java/nubiweather/build.gradle
+++ b/backend/spring + java/nubiweather/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+	implementation 'org.json:json:20210307'
+
 }
 
 tasks.named('test') {
